--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One Page Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <header class="header">
+        <h1>Welcome to My Website</h1>
+    </header>
+
+    <section class="section">
+        <h2>Section 1</h2>
+        <p>This is the first section of the website.</p>
+    </section>
+
+    <section class="section">
+        <h2>Section 2</h2>
+        <p>This is the second section of the website.</p>
+    </section>
+
+    <section class="section">
+        <h2>Section 3</h2>
+        <p>This is the third section of the website.</p>
+    </section>
+
+    <footer class="footer">
+        <p>Footer Content &copy; 2025</p>
+    </footer>
+
+</body>
+</html>
