--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Page Website</title>
+    <title>Ogham Woodworks</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header class="header">
-        <h1>Welcome to My Website</h1>
+        <h1>Ogham Woodworks</h1>
     </header>
 
     <section class="section">
-        <h2>Section 1</h2>
-        <p>This is the first section of the website.</p>
+        <h2>About Us</h2>
+        <p>Welcome to Ogham Woodworks! We are passionate about creating beautiful wooden pieces that stand the test of time.</p>
     </section>
 
     <section class="section">
-        <h2>Section 2</h2>
-        <p>This is the second section of the website.</p>
+        <h2>Services Offered</h2>
+        <p>We offer a range of services including custom furniture, restoration, and bespoke woodworking projects.</p>
     </section>
 
     <section class="section">
-        <h2>Section 3</h2>
-        <p>This is the third section of the website.</p>
+        <h2>Photo Gallery</h2>
+        <p>Check out our latest work and projects on our Instagram feed.</p>
+        <!-- Instagram feed placeholder -->
     </section>
 
     <footer class="footer">
-        <p>Footer Content &copy; 2025</p>
+        <div class="footer-column">
+            <h3>Contact Details</h3>
+            <p>Email: contact@oghamwoodworks.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>Address: 123 Woodwork Lane, Craftsville</p>
+        </div>
+        <div class="footer-column">
+            <h3>Follow Us</h3>
+            <p>Facebook</p>
+            <p>Instagram</p>
+            <p>Twitter</p>
+        </div>
+        <div class="footer-column">
+            <h3>More Information</h3>
+            <p>Blog</p>
+            <p>FAQs</p>
+            <p>Terms & Conditions</p>
+        </div>
     </footer>
 
 </body>
