--- a/index.html
+++ b/index.html
@@ -1,72 +1,61 @@
-body {
-    font-family: 'Open Sans', sans-serif; /* Changed font to Open Sans */
-    margin: 0;
-    padding: 0;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One Page Website</title>
+    <title>Ogham Woodworks</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-.header {
-    background-image: url('https://woodmizer.co.uk/media/wysiwyg/art_4_1.jpg'); /* Replace with the path to your woodmill image */
-    background-size: cover;
-    background-position: center;
-    color: white;
-    text-align: center;
-    padding: 100px 0;
-    position: relative;
-}
+    <header class="header">
+        <h1>Welcome to My Website</h1>
+        <h1>Ogham Woodworks</h1>
+    </header>
 
-.header:before { /* Added black overlay with 50% transparency */
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 1;
-}
+    <section class="section">
+        <h2>Section 1</h2>
+        <p>This is the first section of the website.</p>
+        <h2>About Us</h2>
+        <p>Welcome to Ogham Woodworks! We are passionate about creating beautiful wooden pieces that stand the test of time.</p>
+    </section>
 
-.header h1 {
-    margin: 0;
-    font-size: 3em;
-    display: inline-block;
-    padding: 20px;
-    position: relative;
-    z-index: 2;
-}
+    <section class="section">
+        <h2>Section 2</h2>
+        <p>This is the second section of the website.</p>
+        <h2>Services Offered</h2>
+        <p>We offer a range of services including custom furniture, restoration, and bespoke woodworking projects.</p>
+    </section>
 
-.section {
-    padding: 50px;
-    text-align: center;
-}
+    <section class="section">
+        <h2>Section 3</h2>
+        <p>This is the third section of the website.</p>
+        <h2>Photo Gallery</h2>
+        <p>Check out our latest work and projects on our Instagram feed.</p>
+        <!-- Instagram feed placeholder -->
+    </section>
 
-.section:nth-child(even) {
-    background-color: #f4f4f4;
-}
+    <footer class="footer">
+        <p>Footer Content &copy; 2025</p>
+        <div class="footer-column">
+            <h3>Contact Details</h3>
+            <p>Email: contact@oghamwoodworks.com</p>
+            <p>Phone: (123) 456-7890</p>
+            <p>Address: 123 Woodwork Lane, Craftsville</p>
+        </div>
+        <div class="footer-column">
+            <h3>Follow Us</h3>
+            <p>Facebook</p>
+            <p>Instagram</p>
+            <p>Twitter</p>
+        </div>
+        <div class="footer-column">
+            <h3>More Information</h3>
+            <p>Blog</p>
+            <p>FAQs</p>
+            <p>Terms & Conditions</p>
+        </div>
+    </footer>
 
-.section:nth-child(odd) {
-    background-color: #e2e2e2;
-}
-
-.footer {
-    background-color: black; /* Changed footer background to black */
-    color: grey; /* Changed footer text to grey */
-    text-align: left;
-    padding: 20px 0;
-    display: flex;
-    justify-content: space-around;
-}
-
-.footer-column {
-    flex: 1;
-    padding: 10px;
-}
-
-.footer-column h3 {
-    border-bottom: 1px solid grey;
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-}
-
-.footer-column p {
-    margin: 5px 0;
-}
+</body>
