--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>One Page Website</title>
-    <title>Ogham Woodworks</title>
+    <title>Ogham Woodworks - Wood services in Perthshire & Angus</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
     <header class="header">
-        <h1>Welcome to My Website</h1>
         <h1>Ogham Woodworks</h1>
     </header>
 
@@ -37,7 +35,7 @@
     </section>
 
     <footer class="footer">
-        <p>Footer Content &copy; 2025</p>
+        
         <div class="footer-column">
             <h3>Contact Details</h3>
             <p>Email: contact@oghamwoodworks.com</p>
@@ -56,6 +54,8 @@
             <p>FAQs</p>
             <p>Terms & Conditions</p>
         </div>
+
+        <p>Footer Content &copy; 2025</p>
     </footer>
 
 </body>
