--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ogham Woodworks - Wood services in Perthshire & Angus</title>
     <link rel="stylesheet" href="styles.css">
+ <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet"> <!-- Added Open Sans font link -->
 </head>
 <body>
 
