--- a/index.html
+++ b/index.html
@@ -5,29 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ogham Woodworks - Wood services in Perthshire & Angus</title>
     <link rel="stylesheet" href="styles.css">
- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet"> <!-- Added Open Sans font link -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap" rel="stylesheet"> <!-- Added Open Sans font link -->
 </head>
 <body>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="#section1">Section 1</a></li>
+            <li><a href="#section2">Section 2</a></li>
+            <li><a href="#section3">Section 3</a></li>
+        </ul>
+    </nav>
 
     <header class="header">
         <h1>Ogham Woodworks</h1>
     </header>
 
-    <section class="section">
+    <section class="section" id="section1">
         <h2>Section 1</h2>
         <p>This is the first section of the website.</p>
         <h2>About Us</h2>
         <p>Welcome to Ogham Woodworks! We are passionate about creating beautiful wooden pieces that stand the test of time.</p>
     </section>
 
-    <section class="section">
+    <section class="section" id="section2">
         <h2>Section 2</h2>
         <p>This is the second section of the website.</p>
         <h2>Services Offered</h2>
         <p>We offer a range of services including custom furniture, restoration, and bespoke woodworking projects.</p>
     </section>
 
-    <section class="section">
+    <section class="section" id="section3">
         <h2>Section 3</h2>
         <p>This is the third section of the website.</p>
         <h2>Photo Gallery</h2>
@@ -36,7 +44,6 @@
     </section>
 
     <footer class="footer">
-        
         <div class="footer-column">
             <h3>Contact Details</h3>
             <p>Email: contact@oghamwoodworks.com</p>
@@ -58,3 +65,4 @@
     </footer>
 
 </body>
+</html>
